package rape.brutal.haze.pc.constructor;

public interface IUsable {

    void use();
}
