package rape.brutal.haze.pc.constructor;

public interface IUser {

    void use(IUsable iUsable);
}
