package rape.brutal.haze.pc.human;

import rape.brutal.haze.pc.constructor.IUser;

public abstract class Human implements IUser {

    abstract protected void greeting();

    abstract protected void byeing();

}
